# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  work_place.py
.github/workflows/: pici.yml
page_analyzer/: __init__.py  app.py  db.py  pars.py  validate.py
page_analyzer/templates/: 404.html  base.html  index.html  url_detail.html  url_list.html
